[REBUILD/UPGRADE REQUIRED] - Fix error in modLinkTag when passed invalid data. - Add support for modLinkTag properties as url parameters, with context reserved to indicate a context to send to makeUrl(). - Added .gz and fixed .mov reference for icons - Initial tweak of tree menu headers (need to fix flash of right-side header on toggle) - Minor tweaks to logout to fix rendering in Safari (needs IE testing) - Minor IE overrides for top navigation and accordion panel. - Fix small bug with flashing corner on accordion collapse. - Make corners consistent on tree pane. - Standardized derivative resource form panels to move page settings to left. - Fixed manager log to show username, not user ID - Make sure package attr returns '' if false. - Fixed bugs with updating packages from a remote provider. - [#MODX-744] Fixed issue with invalid display of num cleared on cache clearing. - Accordion header styles fixed in IE8. - Adjusted setup procedures to allow for more lexicon support for pre-load checks - Adjusted setup lexicon to allow for multiple topics; conformed upgrade scripts and other references to match - Consolidated similar code, esp. with regards to fatal errors - Added smarter checks for xPDO failures in connectors - Cleaned up upgrade scripts, other misc fixes. - New page settings icon for the header of tree menus. - Enhanced User Group update/create screen to now have grids that allow you to assign Resource Group / Context permissions to that user group. This will help clear up confusion with the access relationships. - Fixed scope issue in accordion.css that was causing odd behaviours with panels in the main content. - Export Lexicon now prompts for download of exported file. - Added request_controller system setting to indicate the front-controller file (default=index.php). - Fixed array_merge warnings in modLexicon. - Added back support for anonymous user access control. - Added support for returnUrl parameter to be sent to login processor to allow unauthoriz

--- a/manager/templates/default/css/ie.css
+++ b/manager/templates/default/css/ie.css
@@ -1,4 +1,20 @@
-
 #modx-frame-ct {
     height: 500px !important;
-    }
+}
+
+.modx-accordion .x-accordion-hd {
+	/* cannot make the dang right corner work in IE7 */
+	/* the star in front of properties targets IE7-only */
+	*margin-right: 0;
+	overflow: visible;
+}
+
+#rightlogin {
+	text-align: right;
+}
+
+#rightlogin a.modx-logout {
+	display: block;
+	float: right;
+	margin-left: 0;
+}
