--- a/manager/templates/default/css/style/accordion.css
+++ b/manager/templates/default/css/style/accordion.css
@@ -21,62 +21,45 @@
     margin: 1% 0 1% 1%;
 }
 
-.modx-accordion .tl,.modx-accordion .tr,.modx-accordion .bl,.modx-accordion .br
-    {
-    background: transparent url(../../images/restyle/i/corner-tree-16.png) no-repeat
-        ;
+.modx-accordion .tl,.modx-accordion .tr,.modx-accordion .bl,.modx-accordion .br {
+    background: transparent url(../../images/restyle/i/corner-tree-20.png) no-repeat;
     position: absolute;
-    width: 16px;
-    height: 16px;
+    width: 20px;
+    height: 20px;
     z-index: 1;
 }
 
 .modx-accordion .tl {
-    top: -8px;
-    left: -8px;
+    top: -10px;
+    left: -10px;
 }
 
 .modx-accordion .tr {
-    top: -8px;
-    right: -8px;
+    top: -10px;
+    right: -10px;
 }
 
 .modx-accordion .br {
-    bottom: -8px;
-    right: -8px;
+    bottom: -10px;
+    right: -10px;
 }
 
 .modx-accordion .bl {
-    bottom: -8px;
-    left: -8px;
+    bottom: -10px;
+    left: -10px;
 }
 
 .modx-accordion .x-accordion-hd {
     height: 25px;
     line-height: 25px;
     color: #f7f7f7;
-    background: transparent url(../../images/restyle/i/bg-x-accordion-hd.png) left
-        top;
+    background: transparent url(../../images/restyle/i/bg-x-accordion-hd.png) left top;
     margin-right: 0;
     font-size: 1.3em;
     padding-left: 36px;
     overflow: visible;
     position: relative;
     border: 0;
-}
-
-.modx-accordion .x-panel-header-text {
-    /*background: transparent url(../../images/restyle/i/bg-x-accordion-hd.png) right top;*/
-    /*
-    height: 32px;    
-    display: block;
-    position: absolute;
-    margin-left: -30px;
-    text-indent: 24px;
-    width: 100%;
-    z-index: 4;
-    */
-    
 }
 
 .modx-accordion .x-tool-toggle {
@@ -90,10 +73,7 @@
     background-position: 0 0;
 }
 
-/*
-.modx-accordion div:hover.x-tool-toggle {
-    background-position: 0 100%;
-}*/ /* other stuff */
+/* other stuff */
 .modx-tree .x-toolbar {
     background: #eee;
     /*border: 1px solid #fff;*/
@@ -111,4 +91,41 @@
 .modx-accordion .x-tree-root-ct {
     background-color: #eee;
     padding: .4em;
+}
+
+
+
+.modx-accordion .x-accordion-hd {
+	margin-right: 10px;
+	overflow: visible;
+	height: 32px;
+	line-height: 32px;
+	padding: 0 0 0 36px;
+	background: transparent url(../../images/restyle/i/bg-x-accordion-hd2.png) 0 0;
+}
+.modx-accordion .x-panel-header-text,
+.modx-accordion .x-panel-animated .x-panel-header-text {
+	margin-right: -10px !important;
+    background: transparent url(../../images/restyle/i/bg-x-accordion-hd2.png) 100% 0 !important;
+	display: block;
+	line-height: 32px;
+}
+.modx-accordion .x-panel .x-panel-animated div.x-panel-header {
+	overflow: visible !important;
+}
+#modx-resource-tree-panel .x-accordion-hd {
+    background-position: 0 0;
+}
+#modx-element-tree-panel .x-accordion-hd {
+    background-position: 0 -32px;
+}
+#modx-file-tree-panel .x-accordion-hd {
+	    background-position: 0 -64px;
+	}
+#modx-static-page-settings .x-accordion-hd {
+    background-position: 0 -96px;
+}
+#modx-element-tree-panel,
+#modx-file-tree-panel {
+    margin-top: 7px;
 }
